--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
+body {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 0 2rem;
+  margin: 0 auto;
+  border-bottom: 1px solid #eee;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar a {
+  text-decoration: none;
+}
+.navbar .links a {
+  text-decoration: none;
+  margin-left: 2rem;
+  padding: 5px;
+  color: rgb(83, 77, 77);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar h1 {
+  color: lightcoral;
+}
+
+.navbar .links {
+  margin-left: auto;
+  margin-right: 1rem;
+}
+
+.navbar a :hover {
+  color: crimson;
+}
+
+.add-todo {
+  margin: 10px;
+  padding: 10px 0;
+}
+
+.show-todo {
+  margin: 5px 10%;
+}
+.todo-list {
+  margin: 1px 10%;
+  padding: 0;
+  list-style-type: none;
+}
+.blank-todo {
+  color: gray;
+}
+.todo-items {
+  text-transform: capitalize;
+  padding: 10px 15px;
+  border: 1px solid #eee;
+  border-left: 4px solid lightcoral;
+  text-align: justify;
+  /* display: flex; */
+  /* align-content: stretch; */
+  background-color: lightgoldenrodyellow;
+}
+/* .todo-items li {
+  box-shadow: 2px 5px #000;
+  border-radius: 10px;
+} */
+.todo-list :hover {
+  background-color: antiquewhite;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
