--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   padding: 0 2rem;
   margin: 0 auto;
   border-bottom: 1px solid #eee;
+  max-width: 80%;
 }
 
 .navbar a {
@@ -15,18 +16,17 @@ body {
 }
 .navbar .links a {
   text-decoration: none;
-  margin-left: 2rem;
-  padding: 5px;
+  margin: 10px;
   color: rgb(83, 77, 77);
 }
 
 .navbar h1 {
+  padding: 2px;
   color: lightcoral;
 }
 
 .navbar .links {
   margin-left: auto;
-  margin-right: 1rem;
 }
 
 .navbar a :hover {
