--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,11 @@ body {
 .navbar {
   display: flex;
   align-items: center;
-  padding: 0 2rem;
   margin: 0 auto;
+  padding: 0 2rem;
   border-bottom: 1px solid #eee;
-  max-width: 80%;
+  background-color: beige;
+  height: 4rem;
 }
 
 .navbar a {
@@ -16,13 +17,12 @@ body {
 }
 .navbar .links a {
   text-decoration: none;
-  margin: 10px;
+  margin-left: 15px;
   color: rgb(83, 77, 77);
 }
 
 .navbar h1 {
-  padding: 2px;
-  color: lightcoral;
+  color: crimson;
 }
 
 .navbar .links {
@@ -30,7 +30,7 @@ body {
 }
 
 .navbar a :hover {
-  color: crimson;
+  color: orangered;
 }
 
 .add-todo {
@@ -51,19 +51,15 @@ body {
 }
 .todo-items {
   text-transform: capitalize;
+  font-size: large;
   padding: 10px 15px;
   border: 1px solid #eee;
   border-left: 4px solid lightcoral;
   text-align: justify;
-  /* display: flex; */
-  /* align-content: stretch; */
   background-color: lightgoldenrodyellow;
 }
-/* .todo-items li {
-  box-shadow: 2px 5px #000;
-  border-radius: 10px;
-} */
+
 .todo-list :hover {
-  background-color: antiquewhite;
+  background-color: blanchedalmond;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
